2007-05-06  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed unnecessary inclusion of redir.h from parser.c.
	* Invoke sh_error on error in copyfd.
	* Use dup2 instead of copyfd in evalbackcmd.
	* Replace copyfd by savefd and dup2.
	* Removed redundant CLOEXEC calls.

2007-05-05  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed typo in parser.h comment.

2007-04-28  Dan Nicholson <dbn.lists@gmail.com>

	* Set LC_COLLATE for sort in mkbuiltin.

2006-10-22  Gerrit Pape <pape@smarden.org>

	* Fixed command -v segmentation fault.

2006-10-13  Alexey Gladkov <legion@altlinux.org>

	* Check return code for getgroups and fwrite.

2006-10-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed inverted char class matching.

2006-05-23  Alexey Gladkov <legion@altlinux.org>

	* Added --with-libedit option to configure.

2006-03-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed useless parsebackquote flag.
	* Use alloca to get rid of setjmp in parse.c.
	* Only use signed char for syntax arrays.

2006-01-12  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed eval exit status with empty arguments.

2005-11-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.3.

2005-11-14  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix \c spillage across echo commands.

2005-11-13  Herbert Xu <herbert@gondor.apana.org.au>

	* Remove unnecessary truncation in _STPUTC.
	* Always call conv_escape_str in echocmd.

2005-11-04  Herbert Xu <herbert@gondor.apana.org.au>

	* Use mktemp if tempfile is not available.

2005-10-30  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed support for disabling job control.

2005-10-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Updated BSD licence to 3-clause version per NetBSD.
	* Updated copyright.
	* Removed CVS IDs and inclusion of sys/cdefs.h.
	* Removed use of __P from error.h.
	* Use bsd_signal if it exists and signal does not.
	* Stop using sysexits.h in commandcmd.
	* Use stat if stat64 does not exist.